fixing spacing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Bebas Neue';
   background-image: linear-gradient(darkgreen, green, white);
+  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -86,16 +87,10 @@ div {
     flex-direction: column;
 }
 
-@media screen and (min-width: 768px) {
-
-    #addExpenseAmount,
-    #addExpense {
-        height: 20px;
-        margin-top: 17px;
-    }
 a{
     text-decoration: none;
-    color:black
+    color:black;
+    padding: 7px;
 
 
 }
@@ -103,12 +98,29 @@ a:hover{
     color: silver;
 }
 
+header{
+    width:100%;
+    display:flex;
+    justify-content: center;
+
+}
+
+@media screen and (min-width: 1100px) {
+
+    #addExpenseAmount,
+    #addExpense {
+        height: 20px;
+        margin-top: 17px;
+    }
+
+
+
 @media screen and (min-width: 768px) {
 
     a{
         text-decoration: none;
         color:black;
-        padding: 7px;
+        padding: 10px;
 
 
     }
@@ -134,7 +146,7 @@ a:hover{
   .expensebuttons {
     display: flex;
     flex-direction: column;
-    width: 10%;
+    
   }
 
   body {
@@ -238,5 +250,6 @@ a:hover{
 
 
 
-}
-}
+
+
+}}
